--- a/src/css/Invite.css
+++ b/src/css/Invite.css
@@ -8,6 +8,7 @@
 }
 .DiscordInvite-Content {
   display: flex;
+  margin-top: 5px;
 }
 .DiscordInvite-Message {
   padding-bottom: 5px;
@@ -22,6 +23,13 @@
   font-weight: bold;
   vertical-align: top;
   font-size: large;
+  text-decoration: none;
+}
+.DiscordInvite-Name a {
+  color: white;
+}
+.DiscordInvite-Name:hover {
+  text-decoration: underline;
 }
 .DiscordInvite-Icon {
   width: 50px;
@@ -29,10 +37,14 @@
   margin-right: 8px;
   border-radius: 15px;
 }
+.DiscordInvite-Icon, .DiscordInvite-Name:hover {
+  cursor: pointer;
+}
 .DiscordInvite-Online-Members {
   display: flex;
   width: 225px;
   justify-content: space-between;
+  color: lightgrey;
 }
 .DiscordInvite-Button {
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -41,34 +53,46 @@
   margin-left: auto;
   text-align: center;
   display: block;
-  padding: 12px 20px;
+  padding: 16px 20px;
   text-decoration: none;
   font-size: 16px;
   cursor: pointer;
   transition: border-color .17s ease;
   border-radius: 3px;
+  color:white;
 }
 .DiscordInvite-Button:hover {
   border-color: rgba(255, 255, 255, 0.6);
 }
 .DiscordInvite-MembersCircle{
-  width: 5px;
-  height: 5px;
   background: grey;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
-  transform: translate(0%,50%);
+  transform: translateY(50%);
   margin-right: 3px;
   display: inline-block;
+  border: 1px solid #999999;
 }
 .DiscordInvite-OnlineCircle {
-  width: 5px;
-  height: 5px;
+  background: #43b581;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
-  background: green;
-  transform: translate(0%,50%);
+  transform: translateY(50%);
   margin-right: 3px;
   display: inline-block;
+  border: 1px solid #999999;
 }
 .DiscordInvite-Online, .DiscordInvite-Members {
   font-size: small;
+}
+.DiscordInvite-Members {
+  margin-right: 30px;
+}
+a:visited {
+  color: white;
+}
+a {
+  text-decoration: none;
 }
